tests/fixtures/type_err/missing_field.reconf
type Config = {
  port : Int,
  host : String,
};

let config = {
  port = 8080,
} : Config;

config
